# absa-review-smartphone

./: .gitignore  README.md  pyproject.toml
demo/: app.py
notebooks/: absa_phobert_bilstm_tclstm.ipynb  ate_acsc_base.ipynb  pipeline1.ipynb  test.ipynb
outputs/absa_phobert_bilstm_tclstm/: main_metrics_summary.csv  stage1_global_threshold_curve.csv  stage1_threshold_by_aspect.csv  stage2_class_weights.csv  stage2_classification_report.csv  stage2_neutral_threshold_tuning.csv
outputs/pipeline1/: confusion_matrix.csv
scripts/: download_checkpoints.py
